kubernetes/applications/media/books/kavita/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
spec:
  selector: {}
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 2501
        runAsGroup: 2501
        fsGroup: 2501
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: kavita
        image: ghcr.io/kareadita/kavita:latest # renovate: docker=ghcr.io/kareadita/kavita
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: [ "ALL" ]
        ports:
          - name: http
            containerPort: 5000
        volumeMounts:
          - name: config
            mountPath: /kavita/config
          - name: library
            mountPath: /books
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: kavita-config
      - name: library
        persistentVolumeClaim:
          claimName: books-media-nfs
