kubernetes/applications/media/books/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: http
